[package]
name = "radbot"
version = "0.1.0"
authors = ["Quinn Tucker"]
edition = "2021"

[dependencies]
rand = "0.8.4"
by_address = "1.0.4"
num-integer = "0.1"
itertools = "0.10"
crossterm = "0.23"
ordered-float = "2.10"
clap = { version = "3.1", features = ["derive"] }

[profile.release]
lto = true
